--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--27 June 2024-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Maria Penas | WDD 130</title>
-        <meta name="description" content="Maria Penas's BYU-Idaho WDD 130 course home page".>
+        <meta name="description" content="Maria Penas's BYU-Idaho WDD 130 course home page">
         <meta name="author" content="Maria Penas">
 
         <link rel="stylesheet" href="styles/styles.css">
@@ -17,14 +18,22 @@
                     <a href="#">Home</a>
                     <a href="wwr/">Rafting Site</a>
                     <a href="wwr/site-plan-rafting.html">Rafting Site Plan </a>
+                    <a href="https://linkedin.com">Linkedin</a>
+                    <a href="https://facebook.com">Facebook</a>
                 </nav>
                 </header>
                 <main>
                     <h1>Maria Penas | WDD 130</h1>
                     <img src="images/profile.jpg" alt="Hello, my name is Maria Penas" width="200">
                     <p>Hello! My name is Maria Penas and I live in London,England.I like to watch tennis in wimbledon.</p>
+<ul class="box indent">
+<li><a href="https://newsroom.churchofjesuschrist.org/article/manila-philippines-temple" target="blank">Manila Philippines Temple</a></li>
+<li><a href="https://newsroom.churchofjesuschrist.org/article/london-england-temple" target="blank">London England Temple </a></li>
+<li><a href="https://newsroom.churchofjesuschrist.org/article/salt-lake-temple" target="blank">Salt Lake Temple</a></li> 
+</ul>
+
                 </main>                                
-                <aside>
+                <aside class="box">
                     <h2>London</h2>
                     <img src="images/london-bigben.jpg" alt="London's Big Ben ">
                     <p>Big Ben is the nickname for the Great Bell of the Great Clock of Westminster, and, by extension, for the clock tower itself, which stands at the north end of the Palace of Westminster in London, England.</p>
@@ -33,4 +42,5 @@
                     <p>©️2024 🌻Maria Penas 🌷 London ,England</p> 
                 </footer>
         </body>
+        <!--27 June 2024-->
 </html>       
