--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -40,6 +40,7 @@
             Palette URL: <a href="https://coolors.co/98ce00-16e0bd-78c3fb-89a6fb-98838f" target="_blank">https://coolors.co/98ce00-16e0bd-78c3fb-89a6fb-98838f</a>
             <p></p>                                                                            
             <h3>Typography</h3>
+            Typography URL: <a href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap')" target="_blank">https://fonts.googleapis.com</a>
             <h4> Headings Example Font</h4>
             <h4>Normal Text Paragraph Example Font</h4>
             <p>Example text</p>
