--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <main>
                     <h1>Maria Penas | WDD 130</h1>
                     <img src="images/profile.jpg" alt="Hello, my name is Maria Penas" width="200">
-                    <p>Hello! My name is Maria Penas and I live in London,England.I like to watch tennis in wimbledon.</p>
+                    <p>Hello! My name is Maria Penas and I live in London,England.I like to watch tennis in wimbledon.During the summer season ,I also like to stroll around the gardens of Kensington Palace and Kew Garden botanical herbs and flower exhibitions.</p>
 <ul class="box indent">
 <li><a href="https://newsroom.churchofjesuschrist.org/article/manila-philippines-temple" target="blank">Manila Philippines Temple</a></li>
 <li><a href="https://newsroom.churchofjesuschrist.org/article/london-england-temple" target="blank">London England Temple </a></li>
