--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -64,5 +64,7 @@
         <footer>
             <p>©️2024 🌻Rafting Site Document 🌻 Maria Penas 🌻 WDD 130</p>
         </footer>
+    </body>
+</html>
         
 
