--- a/wwr/about.html
+++ b/wwr/about.html
@@ -25,7 +25,7 @@
                   <img src="images/hero_transparency.png" alt="Rafting Company ">
                   <h1>Rafting Company</h1>
                   <article>
-                    <img src="images/..." alt="...">   
+                    <img src="images/rafting7.jpg" alt= " Rafting fun">   
                     <p>Lorem ipsum ...</p>
                   </article>
                 </div>
@@ -39,7 +39,7 @@
                   <img src="images/rafting1.jpg" alt="Rafting Challenge">
                   <img src="images/rafting2.jpg" alt="Rafting Activities">
                   <img src="images/rafting3.jpg" alt="Rafting Teams">
-                  <img src="images/rafting4.jpg" alt="Rafting Adventure">
+                  <img src="images/rafting6.jpg" alt="Rafting Adventure">
                 </section>
             </main>
             <footer>
