--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,21 +11,23 @@
             <header>
                 <img src="images/logo.png" alt="Rafting Site Logo">
                 <nav>
-                    <a href="#">index.html</a>
-                    <a href="#">about.html</a>
-                    <a href="#">trips.html</a>
-                    <a href="#">contact.html</a>
+                    <a href="#">Home</a>
+                    <a href="#">About Us</a>
+                    <a href="#">Trips</a>
+                    <a href="#">Contact Us</a>
                   </nav>
 
                 <h1>Rafting Site Plan</h1>
                 <div>Maria Penas</div>
             </header>
             <main>
+                
                 <div class="hero">
-                  <img src="images/hero_transparency.png" alt="Rafting Company ">
-                  <h1>Rafting Company</h1>
+                  <img src="images/hero1.jpg" alt="Rafting Company place holder image " width="850" height="300">
+                 <h1>Rafting Company</h1>
+                 
                   <article>
-                    <img src="images/rafting7.jpg" alt= " Rafting fun">   
+                         <img src="images/" alt= " Rafting fun">   
                     <p>Lorem ipsum ...</p>
                   </article>
                 </div>
@@ -34,12 +36,12 @@
                         <p></p>White water rafting involves using single-bladed paddles to power a large inflatable raft with up to nine people. The raft is usually paddled through sections of rapids where the water moves quickly and in different directions, which causes the water to foam up and turn white, hence the name.
                 </section>
                 <section>
-                  <h2>Adventure Awaits You!</h2>
-                  <img src="images/rafting0.jpg" alt="Rating Experience">
-                  <img src="images/rafting1.jpg" alt="Rafting Challenge">
-                  <img src="images/rafting2.jpg" alt="Rafting Activities">
-                  <img src="images/rafting3.jpg" alt="Rafting Teams">
-                  <img src="images/rafting6.jpg" alt="Rafting Adventure">
+                 <h2>Adventure Awaits You!</h2>
+                    <img src="images/rafting0.jpg" alt="Rating Experience">
+                    <img src="images/rafting1.jpg" alt="Rafting Challenge">
+                    <img src="images/rafting2.jpg" alt="Rafting Activities">
+                    <img src="images/rafting3.jpg" alt="Rafting Teams">
+                    <img src="images/rafting6.jpg" alt="Rafting Adventure">
                 </section>
             </main>
             <footer>
