--- a/wwr/about.html
+++ b/wwr/about.html
@@ -27,13 +27,13 @@
                  <h1>Rafting Company</h1>
                  
                   <article>
-                         <img src="images/" alt= " Rafting fun">   
+                    <img src="images/rafting7.jpg" alt= " Rafting fun">   
                     <p>Lorem ipsum ...</p>
                   </article>
                 </div>
                 <section>
-                        <h2>History</h2>
-                        <p></p>White water rafting involves using single-bladed paddles to power a large inflatable raft with up to nine people. The raft is usually paddled through sections of rapids where the water moves quickly and in different directions, which causes the water to foam up and turn white, hence the name.
+                  <h2>History</h2>
+                  <p></p>White water rafting involves using single-bladed paddles to power a large inflatable raft with up to nine people. The raft is usually paddled through sections of rapids where the water moves quickly and in different directions, which causes the water to foam up and turn white, hence the name.
                 </section>
                 <section>
                  <h2>Adventure Awaits You!</h2>
@@ -48,16 +48,16 @@
                 <p>©️2024 🌻Rafting Company 🌻 Maria Penas 🌻 </p>
             </footer>
             <nav class="sociallinks">
-                <a href="https://facebook.com">
-                    <img src="1_Facebook_colored_svg_copy-64.webp" alt="Facebook">
-                </a>
-                <a href="https://twitter.com">
-                    <img src="twitter.svg" alt="Twitter">
-                </a>
-                <a href="https://instagram.com">
-                    <img src="images/instagram.svg" alt="Instagram">
-                </a>
-                </nav>
+              <a href="https://facebook.com">
+                <img src="1_Facebook_colored_svg_copy-64.webp" alt="Facebook">
+             </a>
+             <a href="https://twitter.com">
+                <img src="twitter.svg" alt="Twitter">
+             </a>
+             <a href="https://instagram.com">
+                <img src="images/instagram.svg" alt="Instagram">
+            </a>
+            </nav>
             
 
 
