--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8"> 
         <meta name="viewport"  content="width=device-width,initial-scale-1.0">
         <title>WDD 130 | HTML Form - User Poll</title>
+        <link rel="stylesheet" href="styles/poll-form.css">
     </head>
     <body>
     <header>
@@ -17,7 +18,6 @@
                   <label for="fullname">Full Name:</label>
                   <input type="text" id="fullname" name="fullname">
                 </div>
-        
                 <div class="form-item column2">
                   <label for="useremail">Email:</label>
                   <input type="Email" id="usermail" name="usermail">
