--- a/week02/wireframes.html
+++ b/week02/wireframes.html
@@ -12,7 +12,7 @@
                     <img src="" alt="logo">
                 </div>
                 <nav>
-                    <a href="#">index</a>
+                    <a href="#">Home</a>
                     <a href="#">link1</a>
                     <a href="#">link2</a>
                     <a href="#">link3</a>
