--- a/wwr/about.html
+++ b/wwr/about.html
@@ -21,15 +21,15 @@
                 <div>Maria Penas</div>
             </header>
             <main>
-                
-                <div class="hero">
+              <div class="herodiv">
                   <img src="images/river-wide.jpg" alt="Rafting Company place holder image " width="850" height="300">
                  <h1>Rafting Company</h1>
                  <article>
-                     <img src="images/rafting7.jpg" alt= " Rafting fun">   
+                     <img src="images/" alt= " Rafting fun">   
                      <p>Lorem ipsum ...</p>
                   </article>
-                </div>
+                  </div>
+              
                 <section>
                   <h2>History</h2>
                   <p>White water rafting involves using single-bladed paddles to power a large inflatable raft with up to nine people. The raft is usually paddled through sections of rapids where the water moves quickly and in different directions, which causes the water to foam up and turn white, hence the name.</p>
