--- a/wwr/about.html
+++ b/wwr/about.html
@@ -10,22 +10,27 @@
         <body>
             <header>
                 <img src="images/logo.png" alt="Rafting Site Logo">
+                <h1></h1>
                 <nav>
-                    <a href="#">Home</a>
-                    <a href="#">About Us</a>
-                    <a href="#">Trips</a>
-                    <a href="#">Contact Us</a>
+                  <ul class="navigation">
+                    </li><a href="#">Service</a></li>
+                    </li><a href="#">Products</a></li>
+                    </li><a href="#">History</a></li>
+                    </li><a href="#">Contact</a></li>
+                  </ul>
                   </nav>
 
                 <h1>Rafting Site Plan</h1>
                 <div>Maria Penas</div>
             </header>
             <main>
-              <div class="herodiv">
+              <div class="hero">
+                <h1>Rafting Company</h1>
+
                   <img src="images/river-wide.jpg" alt="Rafting Company place holder image " width="850" height="300">
-                 <h1>Rafting Company</h1>
+                 <h1>Rafting Adventures</h1>
                  <article>
-                     <img src="images/" alt= " Rafting fun">   
+                     <img src="images/rafting4.jpg" alt= " Rafting fun">   
                      <p>Lorem ipsum ...</p>
                   </article>
                   </div>
