--- a/wwr/about.html
+++ b/wwr/about.html
@@ -20,15 +20,16 @@
                   </ul>
                   </nav>
 
-                <h1>Rafting Site Plan</h1>
+                <h1>Rafting Fun</h1>
+
                 <div>Maria Penas</div>
             </header>
             <main>
               <div class="hero">
-                <h1>Rafting Company</h1>
+                <h1>Half Day Adventures</h1>
 
                   <img src="images/river-wide.jpg" alt="Rafting Company place holder image " width="850" height="300">
-                 <h1>Rafting Adventures</h1>
+                 <h1>Big Mallard</h1>
                  <article>
                      <img src="images/rafting4.jpg" alt= " Rafting fun">   
                      <p>Lorem ipsum ...</p>
