--- a/wwr/about.html
+++ b/wwr/about.html
@@ -10,13 +10,13 @@
         <body>
             <header>
                 <img src="images/logo.png" alt="Rafting Site Logo">
-                <h1></h1>
+                
                 <nav>
                   <ul class="navigation">
-                    </li><a href="#">Service</a></li>
-                    </li><a href="#">Products</a></li>
-                    </li><a href="#">History</a></li>
-                    </li><a href="#">Contact</a></li>
+                    <li><a href="#">Service</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">History</a></li>
+                    <li><a href="#">Contact</a></li>
                   </ul>
                   </nav>
 
