--- a/week05/quizi.html
+++ b/week05/quizi.html
@@ -4,7 +4,10 @@
         <meta charset="utf-8"> 
         <meta name="viewport"  content="width=device-width,initial-scale-1.0">
         <title>WDD 130 | HTML Form - User Poll</title>
-        <link rel="stylesheet" href="styles/poll-form.css">
+    </head>
+    </head>
+    <body>
+        <link rel="stylesheet" href="styles/quizi.css">
     </head>
     <body>
     <header>
