--- a/week05/quizi.html
+++ b/week05/quizi.html
@@ -5,7 +5,7 @@
         <meta name="viewport"  content="width=device-width,initial-scale-1.0">
         <title>WDD 130 | HTML Form - User Poll</title>
     </head>
-    </head>
+    <head>
     <body>
         <link rel="stylesheet" href="styles/quizi.css">
     </head>
