--- a/quiz.html
+++ b/quiz.html
@@ -33,13 +33,13 @@
                 <textarea id="q2" name="q2" rows="1" placeholder=""></textarea>
 
                 <label for="q3">3.Which of the following is a valid CSS comment?"</label>
-                 
+                <textarea id="q3" name="q3" rows="1" placeholder=""></textarea>
                 <select id="Choose_one" name="browser">
                     <option value="" selected disabled> Choose One ...</option>  
                 </select>
                  
                 <label for ="q4"> 4.What is the bottom margin given this declaration?</label>
-                <textarea id="poll" name="questionire" rows="4" placeholder=""></textarea>
+                <textarea id="q4" name="questionire" rows="4" placeholder=""></textarea>
             </fieldset>
             <button type="submit">Submit Quiz</button>  
         </form>
