--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -5,7 +5,7 @@
         <meta name="viewport"  content="width=device-width,initial-scale-1.0">
         <title>Rafting Fun | Maria Penas</title>
         <meta name ="author" content="Maria Penas">
-        <link rel="stylesheet" href="styles/contact.css">
+        <link rel="stylesheet" href="styles/rafting.css">
     </head>
         <body>
             <header>
