--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -29,8 +29,10 @@
             </header>
             <main>
 
-              <img src="images/employees.jpg" alt=" three happy employees">
-              <caption>Ra</caption>
+              <img src="images/employee1.jpg" alt=" three happy employees">
+              <img src="images/employee2.jpg" alt=" three happy employees">
+              <img src="images/employee3.jpg" alt=" three happy employees">
+              <caption>Happy Employees to assist you :</caption>
 
             <section class="Employees"> 
             </section>
