--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -67,7 +67,7 @@
                     <label for="option2">Reservation</label><br>
                     <input type="radio" id="option3" name="group1" value="value3">
                     <label for="option3">Website suggestion</label>
-                    <button type="submit" value="Submit">
+                    <button type="submit">Submit</button>
 
                 
              
