--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -61,7 +61,7 @@
                     <label for="option2">Reservation</label><br>
                     <input type="radio" id="option3" name="group1" value="value3">
                     <label for="option3">Website suggestion</label>
-                    <button type="submit">Submit</button>
+                    <button type="submit">Submit Form</button>
 
           
                     
