--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -52,8 +52,8 @@
                     <input type="email" id="email" name="email" required><br><br>
                     <label for="message">Message:</label><br>
                     <input type="message" id="message" name="message" required><br><br>
-                    <label for="subscribe">Subscribe:</label><br>
-                    <input type="subscribe" id="subscribe" name="subscribe" required><br><br>
+                    <label for="subscribe">Please subscribe me for the monthly newsletter.</label><br>
+                    <input type="checkbox" id="subscribe" name="subscribe"><br><br>
                     
                     <p>Choose Option</p>
                     <input type="radio" id="option1" name="group1" value="value1" checked>
