--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -50,8 +50,8 @@
                     <input type="text" id="name" name="name" required><br><br>
                     <label for="email">Email:</label><br>
                     <input type="email" id="email" name="email" required><br><br>
-                    <label for="message">Message:</label><br>
-                    <input type="message" id="message" name="message" required><br><br>
+                    <label for="feedback">Message us:</label><br>
+                    <textarea id="feedback" name="feedback" rows="2" placeholder="#"></textarea><br><br>
                     <label for="subscribe">Please subscribe me for the monthly newsletter.</label><br>
                     <input type="checkbox" id="subscribe" name="subscribe"><br><br>
                     
