--- a/quiz.html
+++ b/quiz.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8"> 
         <meta name="viewport"  content="width=device-width,initial-scale-1.0">
         <title>WDD 130 | HTML Form - User Poll</title>
+        <meta name="description" content="quiz page">
+        <meta name="author" content="Maria Penas">
         <link rel="stylesheet" href="styles/quiz.css">
     </head>
     <body>
