--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,6 +5,8 @@
         <meta name="viewport"  content="width=device-width,initial-scale-1.0">
         <title>Rafting Fun Company | Maria Penas</title>
         <meta name ="author" content="Maria Penas">
+        <meta name="description" content="Rafting fun company abous us page ">
+        
         <link rel="stylesheet" href="styles/rafting.css">
     </head>
         <body>
