--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -5,7 +5,7 @@
         <meta name="viewport"  content="width=device-width,initial-scale-1.0">
         <title>Rafting Fun | Contact</title>
         <meta name ="author" content="Maria Penas">
-        <meta name = "description" content=" Contact us for the white water rafting assignment of WDD 130">
+        <meta name ="description" content="Contact us for information on our white water rafting fun adventure package.">
         <link rel="stylesheet" href="styles/rafting.css">
     </head>
         <body>
@@ -83,4 +83,5 @@
             </nav>
           </footer> 
         </body>
+
 </html>          
