--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8"> 
         <meta name="viewport"  content="width=device-width,initial-scale-1.0">
-        <title>Rafting Fun Company | Maria Penas</title>
+        <title>Rafting Fun Company </title>
         <meta name ="author" content="Maria Penas">
-        <meta name="description" content="Rafting fun company abous us page ">
+        <meta name="description" content="Rafting fun company abous us page">
         
         <link rel="stylesheet" href="styles/rafting.css">
     </head>
