--- a/wwr/index.html
+++ b/wwr/index.html
@@ -13,7 +13,7 @@
                 
                 <nav>
                   <ul class="navigation">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="trips.html">Trips</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
