--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -5,7 +5,7 @@
         <meta name="viewport"  content="width=device-width,initial-scale-1.0">
         <title>Rafting Fun | Contact</title>
         <meta name="author" content="Maria Penas">
-        <meta name="description" content="Contact us for information on our white water rafting fun adventure package.">
+        <meta name="description" content="Contact us provides information on sales and queries and customer support and services.">
         <link rel="stylesheet" href="styles/rafting.css">
     </head>
         <body>
