--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"> 
         <meta name="viewport"  content="width=device-width,initial-scale-1.0">
         <title>Rafting Site Home Page | Maria Penas</title>
-        <meta name="description" content="Rafting fun home page">
+        <meta name="description" content="Rafting fun home page provides information about activities and offfers.">
         <meta name="author" content="Maria Penas">
         <link rel="stylesheet" href="styles/rafting.css">
     </head>
