--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"> 
         <meta name="viewport"  content="width=device-width,initial-scale-1.0">
         <title>Rafting Fun Company </title>
-        <meta name="description" content="Rafting fun company about us page">
+        <meta name="description" content="Rafting fun company about us page provide information about our  company ethos and policy. ">
         <meta name="author" content="Maria Penas">
         <link rel="stylesheet" href="styles/rafting.css">
     </head>
