--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"> 
         <meta name="viewport"  content="width=device-width,initial-scale=1.0">
         <title>Rafting Trips Page| Maria Penas</title>
-        <meta name="description" content="Trips home page information">
+        <meta name="description" content="Trips home page provides information on trips schedule and actvities we offer.">
         <meta name="author" content="Maria Penas">
         <link rel="stylesheet" href="styles/rafting.css">
     </head>
