--- a/wwr/about.html
+++ b/wwr/about.html
@@ -70,7 +70,7 @@
                 </section>
             </main>
             <footer>
-                <p>©️2024 🌻Rafting Company 🌻 Maria Penas 🌻 </p>
+                <p>©️2024 🌻Rafting Fun Company 🌻 Maria Penas 🌻 </p>
             
             <nav class="sociallinks">
               <a href="https://facebook.com">
