--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -69,5 +69,8 @@
                 <img src="images/instagram.webp" alt="Instagram">
             </a>
             </nav>
-          </footer>           
+          </footer> 
+        </body>
+</html>
+          
 
