--- a/wwr/index.html
+++ b/wwr/index.html
@@ -91,5 +91,7 @@
                 <img src="images/instagram.webp" alt="Instagram">
             </a>
             </nav>
-          </footer>           
+          </footer> 
+          </body>
+</html>          
 
