--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -22,7 +22,7 @@
                   </ul>
                   </nav>
 
-                <h1>Rafting Fun</h1>
+                <h1>Rafting Fun Company</h1>
               
 
                 
