--- a/wwr/about.html
+++ b/wwr/about.html
@@ -21,7 +21,7 @@
                   </ul>
                   </nav>
 
-                <h1>Rafting Fun</h1>
+                <h1>Rafting Fun Company</h1>
 
                 
             </header>
