--- a/wwr/index.html
+++ b/wwr/index.html
@@ -21,13 +21,13 @@
                   </ul>
                   </nav>
 
-                <h1>Rafting Fun</h1>
+                <h1>Rafting Fun Company</h1>
 
                 
             </header>
             <main>
                 <h1>
-                    Home page
+                    Home Page
                 </h1>
 
                 <section class="hero">
@@ -53,7 +53,7 @@
                   <br>
 
                   <p>White water rafting involves using single-bladed paddles to power a large inflatable raft with up to nine people. The raft is usually paddled through sections of rapids where the water moves quickly and in different directions, which causes the water to foam up and turn white, hence the name.</p>
-                  <img src="images/rafting01.jpg" alt="Rafting _fun" width ="280">   
+                  <img src="images/rafting01.jpg" alt="Rafting _fun" width ="380">   
 
                   <p>“Whitewater” is formed when water tumbles and falls, becoming aerated, or infused with air making. The bubbles of air have the effect of turning the water white. You may see this in white crests on the tops of the waves, such as “white caps” on lakes or oceans, the entire river seems to become white with aeration.</p>
 
