--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -21,7 +21,7 @@
                   </ul>
                   </nav>
 
-                <h1>Rafting Fun</h1>
+                <h1>Rafting Fun Company</h1>
 
                 
             </header>
@@ -72,5 +72,5 @@
           </footer> 
         </body>
 </html>
-          
+
 
