--- a/wwr/about.html
+++ b/wwr/about.html
@@ -33,7 +33,7 @@
                   <img class="herobackground"  src="images/river-wide.jpg" alt="Rafting Company place holder image " width="850" height="300">
                   <h1>Friends and Family  Adventures</h1>
                  <article class="herobox"> 
-                  <p> Fun,Games,Adventures...</p>
+                  <p> Fun,Games,Adventures for Everyone...</p>
                      <img src="images/rafting5.png" alt="Rafting_fun" width ="150">   
                      
                   </article>
