--- a/wwr/index.html
+++ b/wwr/index.html
@@ -67,7 +67,7 @@
                   <label for="subscribe">Please subscribe me for the monthly newsletter.</label><br>
                   <input type="checkbox" id="subscribe" name="subscribe">
                 </form>
-                 <h2>Adventure Awaits You!</h2>
+                 <h2>Experience White Water Rafting Adventures!</h2>
                 <section class ="Gallery">
 
                  
