--- a/wwr/index.html
+++ b/wwr/index.html
@@ -26,9 +26,7 @@
                 
             </header>
             <main>
-                <h1>
-                    Home Page
-                </h1>
+                <h1>Home Page</h1>
 
                 <section class="hero">
                 
