--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -29,9 +29,9 @@
             </header>
             <main>
 
-              <img src="images/employee1.jpg" alt=" three happy employees">
-              <img src="images/employee2.jpg" alt=" three happy employees">
-              <img src="images/employee3.jpg" alt=" three happy employees">
+              <img src="images/employee1.jpg" alt=" three happy employees" width ="450" height="400">
+              <img src="images/employee2.jpg" alt=" three happy employees" width ="450" height="400">
+              <img src="images/employee3.jpg" alt=" three happy employees" width ="450" height="400">
               <p>Happy employees to assist you </p>
 
 
@@ -42,7 +42,7 @@
               <p>Email: <a href="mailto:">wwr@hotmail.com</a></p>
                 <div class="map">
                   </div>
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d80773.09107035585!2d-1.9421394!3d50.7540836!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48739c33c497b1d5%3A0xc3f26df343a36f9f!2sHengistbury%20Head%20Beach!5e0!3m2!1sen!2suk!4v1721504917947!5m2!1sen!2suk" width="500" height="350" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d80773.09107035585!2d-1.9421394!3d50.7540836!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48739c33c497b1d5%3A0xc3f26df343a36f9f!2sHengistbury%20Head%20Beach!5e0!3m2!1sen!2suk!4v1721504917947!5m2!1sen!2suk" width="1500" height="350" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
                
                   <form action="/submit" method="post">
