--- a/wwr/index.html
+++ b/wwr/index.html
@@ -32,7 +32,7 @@
                 
 
                   <img class="herobackground"  src="images/hero2.jpg" alt="Rafting Company place holder image " width="1000" height="600"> <br>
-                  <a  class= "Call_to_Action" href ="trips.html">Get in touch </a>
+                  <a  class= "Call_to_Action" href ="trips.html">Visit our Trips page</a>
                   <h1>Wonderful  Adventures</h1>
                  <article class="herobox"> 
                   <p> Fun,Games,Adventures...</p>
